--- a/test1.html
+++ b/test1.html
@@ -25,12 +25,20 @@
             height: 400px;
         }
 
-        
+        nav {
+            margin: 0 auto;
+            background-color: aqua;
+            width: 600PX;
+            height: 50px;
+        }
+
+
     </style>
 </head>
 <body>
 
     <header></header>
+    <nav></nav>
 
     
 </body>
